[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
name = "hashcards"
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/eudoxia0/hashcards"

[workspace.dependencies]
axum = "0.8.8"
blake3 = "1.8.3"
chrono = { version = "0.4.43", default-features = false }
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
maud = "0.27.0"
open = "5.3.3"
percent-encoding = "2.3.2"
pulldown-cmark = "0.13.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "fs", "signal"] }
toml = "0.9.8"
walkdir = "2.5.0"

# WASM dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

# Dev dependencies
portpicker = "0.1.1"
reqwest = { version = "0.13.1", features = ["form"] }
tempfile = "3.24.0"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"

[workspace.lints.clippy]
collapsible_if = "allow"
single_match = "allow"
