[package]
name = "hashcards"
description = "A plain text-based spaced repetition system"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hashcards"
path = "src/main.rs"

[dependencies]
hashcards-core = { path = "../hashcards-core", features = ["clock"] }
axum = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
maud = { workspace = true }
open = { workspace = true }
pulldown-cmark = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
portpicker = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }

# CLI is a placeholder - these deps will be used when migrated from src/
[package.metadata.cargo-machete]
ignored = ["axum", "blake3", "chrono", "clap", "env_logger", "hashcards-core", "log", "maud", "open", "pulldown-cmark", "rusqlite", "serde", "serde_json", "tokio", "toml", "walkdir"]

[lints]
workspace = true
